--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-  },
-  "engines": {
-    "node": "18.x"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
@@ -19,12 +16,12 @@
     "axios": "^1.9.0",
     "framer-motion": "^12.13.0",
     "jsonwebtoken": "^9.0.2",
-    "next": "^14.2.3",
+    "next": "15.3.2",
     "node-fetch": "^3.3.2",
     "postcss": "^8.5.3",
     "prisma": "^6.8.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
     "uuid": "^11.1.0"
@@ -33,10 +30,10 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "^14.2.3",
+    "eslint-config-next": "15.3.2",
     "tailwindcss": "^4.1.8",
     "typescript": "^5"
   }
