🚀 Production deployment ready: Fix ESLint config, update database for production, add deployment scripts

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,14 @@
 {
-  "version": 2,
+  "functions": {
+    "app/api/**/*.ts": {
+      "maxDuration": 30
+    }
+  },
+  "env": {
+    "ENABLE_EXPERIMENTAL_COREPACK": "1"
+  },
   "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "framework": "nextjs",
-  "installCommand": "npm install"
+  "devCommand": "npm run dev",
+  "installCommand": "npm install",
+  "framework": "nextjs"
 }
