--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,5 @@
       "maxDuration": 30
     }
   },
-  "env": {
-    "ENABLE_EXPERIMENTAL_COREPACK": "1"
-  },
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": "nextjs"
+  "buildCommand": "prisma generate && next build"
 }
